adjust button on tablet to correct position

--- a/src/style/components/_header.scss
+++ b/src/style/components/_header.scss
@@ -180,8 +180,9 @@ header {
       height: calc(100vh - 200px);
 
       .header-buttons-container {
-        right: 58px;
+        right: 30px;
         left: auto;
+        top: 65%;
 
         .header-btn {
           margin: 32px 0;
